--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,11 +2,31 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+        <!-- Basic -->
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <!-- Mobile Metas -->
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <!-- Site Metas -->
+        <meta name="keywords" content="" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
+            <!-- bootstrap core css -->
+            <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+
+            <!--owl slider stylesheet -->
+            <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
+
+            <!-- fonts style -->
+            <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:400,600,700&display=swap" rel="stylesheet" />
+
+            <!-- Custom styles for this template -->
+            <link href="css/style.css" rel="stylesheet" />
+            <!-- responsive style -->
+            <link href="css/responsive.css" rel="stylesheet" />
         {% endblock %}
 
         {% block javascripts %}
@@ -14,6 +34,13 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {% block body %}
+            <script src="js/jquery-3.4.1.min.js"></script>
+            <script src="js/bootstrap.js"></script>
+            <!-- owl slider -->
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">
+            </script>
+            <script src="js/custom.js"></script>
+        {% endblock %}
     </body>
 </html>
